--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <span>Entradas</span>
                     <img src="./assets/income.svg" alt="image de entradas">
                 </h3>
-                <p>R$ 5.000,00</p>
+                <p id="incomeDisplay">R$ 5.000,00</p>
             </div>
 
             <div class="card">
@@ -35,7 +35,7 @@
                     <span>Saídas</span>
                     <img src="./assets/expense.svg" alt="image de saídas">
                 </h3>
-                <p>R$ 2.000,00</p>
+                <p id="expenseDisplay">R$ 2.000,00</p>
             </div>
 
             <div class="card total">
@@ -43,7 +43,7 @@
                     <span>Entradas</span>
                     <img src="./assets/total.svg" alt="image de total">
                 </h3>
-                <p>R$ 3.000,00</p>
+                <p id="totalDisplay">R$ 3.000,00</p>
             </div>
 
         </section>
@@ -61,6 +61,7 @@
                         <th>Descrição</th>
                         <th>Valor</th>
                         <th>Data</th>0
+
                         <th></th>
                     </tr>
                 </thead>
