--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <span>Entradas</span>
                     <img src="./assets/income.svg" alt="image de entradas">
                 </h3>
-                <p id="incomeDisplay">R$ 5.000,00</p>
+                <p id="incomeDisplay">R$ 0,00</p>
             </div>
 
             <div class="card">
@@ -35,15 +35,15 @@
                     <span>Saídas</span>
                     <img src="./assets/expense.svg" alt="image de saídas">
                 </h3>
-                <p id="expenseDisplay">R$ 2.000,00</p>
+                <p id="expenseDisplay">R$ 0,00</p>
             </div>
 
             <div class="card total">
                 <h3>
-                    <span>Entradas</span>
+                    <span>Total</span>
                     <img src="./assets/total.svg" alt="image de total">
                 </h3>
-                <p id="totalDisplay">R$ 3.000,00</p>
+                <p id="totalDisplay">R$ 0,00</p>
             </div>
 
         </section>
@@ -60,7 +60,7 @@
                     <tr>
                         <th>Descrição</th>
                         <th>Valor</th>
-                        <th>Data</th>0
+                        <th>Data</th>
 
                         <th></th>
                     </tr>
@@ -75,7 +75,7 @@
         <div class="modal">
             <div class="form">
                 <h2>Nova Transação</h2>
-                <form action="">
+                <form action="" onsubmit="Form.submit(event)">
                     <div class="input-group">
                         <label 
                             class="sr-only" 
